# JayConway

./: CMakeLists.txt  Debug.cpp  Debug.hpp  Game.cpp  Game.hpp  GameState.hpp  InputManager.cpp  InputManager.hpp  Life.cpp  Life.hpp  README.md  main.cpp
states/: GameState.cpp  GameState.hpp  Life.cpp  Life.hpp  LifeMenu.cpp  LifeMenu.hpp  LifeSettings.cpp  LifeSettings.hpp  Menu.cpp  Menu.hpp
